<resources>
    <string name="app_name">CoinRank</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="market">Market</string>
    <string name="watchlist">WatchList</string>
    <string name="profile">Profile</string>
    <string name="topgainer">Top Gainer</string>
    <string name="toploser">Top Loser</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="market_cap">Market Cap</string>
    <string name="_24_hours_volume">24 Hours Volume</string>
    <string name="item_not_found">Item Not Found…</string>
    <string name="exit">Exit</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="price">Price</string>
    <string name="_24h_low_24h_high">24h Low / 24h High</string>
    <string name="market_dominance">Market Dominance</string>
    <string name="no_data">No Data</string>
    <string name="_24h">1D</string>
    <string name="_1w">1W</string>
    <string name="_1M">1M</string>
    <string name="_1m">1m</string>
    <string name="_30m">30m</string>
    <string name="_1h">1h</string>
    <string name="_4h">4h</string>
    <string name="market_status_usd">Market Status / USD</string>
    <string name="volume_24h">Volume 24h</string>
    <string name="volume_7d">Volume 7d</string>
    <string name="volume_30d">Volume 30d</string>
    <string name="percentChange_1h">Percent Change 1h</string>
    <string name="percent_change_24h">Percent Change 24h</string>
    <string name="percent_change_7d">Percent Change 7d</string>
    <string name="percent_change_3m">Percent Change 3M</string>
    <string name="percent_change_2m">Percent Change 2M</string>
    <string name="percent_change_1m">Percent Change 1M</string>
    <string name="volume">Volume</string>
    <string name="percent_change">Percent Change</string>
    <string name="TextEmptyStateWatchList">There are nothing here! :)</string>
    <string name="there_isn_t_connection">There isn\'t Connection! Please Check Your Connection</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="coinmarketcap_link">Coinmarketcap Link</string>
    <string name="about">About</string>
    <string name="more">More</string>
    <string name="main_menu">Main Menu</string>
    <string name="text">برنامه کوین مارکت کپ یک اپلیکیشن سبک برای بررسی وضعیت ارزهای دیجیتال است.\n\nاین اپلیکیشن هیچ دسترسی به منابع سیستم شما ندارد و کاملا ایمن است.\n\nاین اپ شامل 2000 ارز اول سایت معتبر کوین مارکت کپ می‌باشد که شما می‌توانید آن ها به ترتیب رنک و رشد و ریزش مشاهده کنید.</string>
    <string name="contacts">راه های ارتباطی با برنامه نویس</string>
    <string name="email">Email: AbolfazlAbbasi185@gmail.com</string>
    <string name="telegram_id">Telegram ID: T.me/AbolfazlAbbac</string>
    <string name="donate_rial">Donate With Gate</string>
    <string name="donate">Donate</string>
    <string name="text_donate">در بسیاری از کشورهای دنیا مخصوصا کشورهای پیشرفته که اینترنت به صورت جز جدایی ناپذیری از زندگی آن ها شده، فرهنگ های خاص و خوبی وجود دارد که متاسفانه در ایران ما به آن صورت دیده نمی‌شود.\n یکی از این فرهنگ های خوب، فرهنگ حمایت کردن کسب و کارها و خدماتی است که به صورت رایگان در دسترس قرار می‌گیرند که اصطلاحا به آن دونیت گفته می شود.\n پس ما هم به نوبه‌ی خودمان دوست داریم این فرهنگ را در کشورمان نهادینه کنیم و شما با کمک به ما حتی اندک، می توانید در این راه به ما کمک کنید.\n در این برنامه هیچ هزینه ای بابت خدمات گرفته نمی شود، پس شما ما را از طریق دکمه زیر حمایت کنید.\n</string>


    <string name="Open_drawer">Open Drawer</string>
    <string name="Close_drawer">Close Drawer</string>

</resources>