<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.MaterialComponents"
                app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="64dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.8">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/marketCapTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/market_cap"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toTopOf="@+id/marketCapNumberTv"
                            app:layout_constraintEnd_toEndOf="@+id/marketCapNumberTv"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="@+id/marketCapNumberTv"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_chainStyle="packed" />

                        <TextView
                            android:id="@+id/marketCapNumberTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginEnd="32dp"
                            android:layout_marginBottom="8dp"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"

                            app:layout_constraintTop_toBottomOf="@+id/marketCapTv" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/dailyVolumeTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_24_hours_volume"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toTopOf="@+id/dailyVolumeNumberTv"
                            app:layout_constraintEnd_toEndOf="@+id/dailyVolumeNumberTv"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="@+id/dailyVolumeNumberTv"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_chainStyle="packed" />

                        <TextView
                            android:id="@+id/dailyVolumeNumberTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginEnd="32dp"
                            android:layout_marginBottom="8dp"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/dailyVolumeTv" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarMarketFragment"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:layout_collapseMode="pin"
                    app:menu="@menu/menu_toolbar"
                    app:navigationIcon="@drawable/ic_baseline_sort_24" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <TextView
                android:id="@+id/itemNotFoundMarketFragmentTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_not_found"
                android:textColor="@color/teal_700"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/searchBoxMarketFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_searchbox"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:drawablePadding="8dp"
                android:drawableTint="#009688"
                android:hint="@string/search"
                android:paddingStart="8dp"
                android:paddingTop="12dp"
                android:paddingEnd="16dp"
                android:paddingBottom="12dp"
                android:textColor="@color/white"
                android:textColorHint="#009688"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/marketFragmentRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/searchBoxMarketFragment" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>