<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        tools:context=".DetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarDetail"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/black"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_scrollFlags="scroll|enterAlways"
                app:menu="@menu/detail_menu_toolbar">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize">

                    <TextView
                        android:id="@+id/titleTextDetailToolbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="BTC"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/rankCryptoDetailToolbar"
                        app:layout_constraintStart_toEndOf="@+id/rankCryptoDetailToolbar"
                        app:layout_constraintTop_toTopOf="@+id/rankCryptoDetailToolbar" />

                    <TextView
                        android:id="@+id/rankCryptoDetailToolbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:background="@drawable/background_rank_toolbar_detail"
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="#6"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/fulldivder" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:layout_marginTop="16dp"
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <WebView
                        android:id="@+id/chartWebView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/textDetailFragmentDeail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="USD"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/divder"
                    app:layout_constraintTop_toBottomOf="@+id/textDetailFragmentDeail" />

                <TextView
                    android:id="@+id/textPriceDetailFragmentTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/price"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />

                <TextView
                    android:id="@+id/priceDetailFragmentTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider"
                    tools:text="564654" />

                <TextView
                    android:id="@+id/textMarketCapDetailFragmentTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/market_cap"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textPriceDetailFragmentTv" />

                <TextView
                    android:id="@+id/marketCapDetailFragmentTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/priceDetailFragmentTv"
                    tools:text="454465" />

                <TextView
                    android:id="@+id/textHigh24_low24h_fragmentDetailTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/_24h_low_24h_high"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textMarketCapDetailFragmentTv" />

                <TextView
                    android:id="@+id/low24h_fragmentDetailTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="2dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/marketCapDetailFragmentTv"
                    tools:text="4655654" />

                <TextView
                    android:id="@+id/high24h_fragmentDetailTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/marketCapDetailFragmentTv"
                    tools:text="4655654" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="2dp"
                    android:text="/"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/high24h_fragmentDetailTv"
                    app:layout_constraintTop_toBottomOf="@+id/marketCapDetailFragmentTv" />

                <TextView
                    android:id="@+id/textMarketDominance_fragmentDetailTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/market_dominance"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textHigh24_low24h_fragmentDetailTv" />

                <TextView
                    android:id="@+id/marketDominance_fragmentDetailTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/low24h_fragmentDetailTv"
                    tools:text="40%" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>